# jizai-monitor

./: index.html  monitor.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_reader.rs  main.rs  mqtt.rs  state_manager.rs
src-tauri/src/mqtt/: client.rs  parse_json.rs
src/components/: CertLoadButton.tsx  CloseTheOthers.tsx  ErrorMessage.tsx  Record.tsx  Sensor.tsx  Service.tsx  ThingNameForm.tsx
src/main/: App.tsx  styles.css
src/monitor/: App.tsx  main.tsx  monitor.tsx  styles.css  types.ts
src/monitor/hooks/: useMonitorData.ts
