[package]
name = "jizai-monitor"
version = "0.2.0"
description = "MQTT通信を使った、Edge死活監視モニタ"
authors = ["gomadoufu"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gomadoufu/jizai-monitor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "dialog-save",
    "fs-write-file",
    "dialog-confirm",
    "window-all",
    "dialog-message",
    "dialog-open",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = { version = "0.22.0", features = ["use-rustls"] }
rustls = "0.21"
tokio = { version = "1", features = ["full", "macros"] }
uuid = { version = "1.4.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
anyhow = "1.0.75"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
